[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/icon_play.png" type="Texture" id=1]
[ext_resource path="res://PlayButton.gd" type="Script" id=2]
[ext_resource path="res://Assets/icon_pause.png" type="Texture" id=3]

[node name="PlayButton" type="Button"]
margin_right = 40.0
margin_bottom = 20.0
rect_min_size = Vector2( 40, 15 )
toggle_mode = true
expand_icon = true
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayTexture" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseTexture" type="TextureRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="." to="." method="_on_PlayButton_pressed"]
